# bar-rs

./: .gitignore  Cargo.toml  flake.nix
.github/workflows/: rust.yml
src/: button.rs  fill.rs  list.rs  main.rs  registry.rs  tooltip.rs
src/config/: insets.rs  mod.rs  module_config.rs  parse.rs
src/listeners/: hyprland.rs  mod.rs  niri.rs  reload.rs  wayfire.rs
src/modules/: battery.rs  bluetooth.rs  cpu.rs  date.rs  disk_usage.rs  empty.rs  media.rs  memory.rs  mod.rs  time.rs  volume.rs
src/modules/hyprland/: window.rs  workspaces.rs
src/modules/niri/: window.rs  workspaces.rs
src/modules/wayfire/: window.rs  workspaces.rs
wiki/: Modules:-Media.md
