[package]
name = "bar-rs"
version = "0.1.0"
edition = "2021"
rust-version = "1.80.1" # from image-webp@0.2.1

[dependencies]
chrono = "0.4"
configparser = "3.1"
ctrlc = "3.4"
directories = "6.0"
hyprland = { git = "https://github.com/hyprland-community/hyprland-rs", branch = "master" }
iced = { git = "https://github.com/Faervan/iced_pop-os.git", branch = "master", features = [
  "tokio",
  "wayland",
  "winit",
  "image",
] }
notify = "8.2"
tokio = { version = "1.42", features = [
  "io-util",
  "macros",
  "process",
  "sync",
] }
udev = { version = "0.9", features = ["mio"] }
bar-rs_derive = { path = "crates/bar-rs_derive" }
downcast-rs = "2.0"
csscolorparser = "0.8"
wayfire-rs = "0.2"
serde_json = "1.0"
niri-ipc = "=25.11.0"
handlebars = "6.3"
serde = { version = "1.0", features = ["derive"] }
reqwest = "0.13"
libc = "0.2"
bluer = { version = "0.17", features = ["bluetoothd"] }

[profile.dev.package."*"]
opt-level = 3
